--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     /* justify-self: start;
     justify-tracks: initial; */
     justify-content: center;
-    background-image: url("images/calculator.png");
+    background-image: url("");
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
